--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container glass p-5">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="section-title">Projects</h2>
-        <p class=" pb-3">Featured work — click to view repo or live demo.</p>
+<!--         <p class=" pb-3">Featured work — click to view repo or live demo.</p> -->
       </div>
 
       <div class="row g-4">
